fix: info-text centralization on mobile

--- a/Src/Css/styles.css
+++ b/Src/Css/styles.css
@@ -2119,6 +2119,7 @@ textarea {
 
     .info-text{
         margin-left: 0vw;
+        text-align: center;
     }
 
     .more-container{
